feat: adding outbox mechanism